log/build_2025-02-14_11-52-23/robina_rfid/stderr.log
  File "/home/peko/colcon_ws/install/robina_rfid/lib/python3.12/site-packages/robina_rfid/rfid_reader.py", line 44
    self.publisher_.publish(String(' '.join(self.tag_buffer))))
                                                              ^
SyntaxError: unmatched ')'

